--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -28,3 +28,24 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+
+
+## package
+
+```{r}
+library(googlesheets4)
+library(dplyr)
+library(lubridate)
+```
+
+## create project
+```{r}
+a <- 2
+a = 2 # = 與 <-同義
+```
+
+```{r}
+a
+```
+
+
