--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -51,4 +51,39 @@ a
 
 ```
 
+##Atomic Vector
+```{r}
+num1 <- 5
+vNum1 <- c(2,5)
+vNum2 <- c(2, num1)
+```
+```{r}
+vNum1 <- c(-1,5)
+vNum2 <- c(2,3)
+vNum4 <- c() # 空向量
+```
+```{r}
+vNum3 <- c(vNum2, vNum1)
+vNum4 <- c(vNum4, vNum1) # 向量疊代 （recursive vector concatenate）
+```
+
+
+##different types
+```{r}
+num1<-5 # 非整數
+num2<-5L # 整數
+
+num1Vector<-c(5,6,7)
+num2Vector<-c(5L,6L,7L)
+```
+```{r}
+typeof(num1Vector)
+typeof(num2Vector)
+```
+
+
+##character
+
+
+
 
