--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -47,9 +47,7 @@ a = 2 # = 與 <-同義
 ```{r}
 a
 ```
-```{r}
 
-```
 
 ##Atomic Vector
 ```{r}
@@ -83,6 +81,19 @@ typeof(num2Vector)
 
 
 ##character
+```{r}
+char1<-"你好"
+char2<-'你好'
+```
+
+```{r}
+library(httr)
+library(dplyr)
+GET("https://api.github.com/repos/tpemartin/108-2-56-inclass-practice/commits") %>%
+  content() %>%
+  View()
+```
+
 
 
 
