--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -131,6 +131,33 @@ typeof(majors10_factor)
 class(majors10_factor)
 ```
 
+```{r}
+levels(majors10_factor)
+```
+
+##list
+```{r}
+vectorExample <- c(2,6,7)
+listExample <- list(2,6,7)
+
+print(vectorExample)
+print(listExample)
+```
+```{r}
+c("2020-03-31T13:40:55Z",
+  "一芳", 
+  "2",
+  "水果茶" )
+
+library(lubridate)
+`小明交易1` <- list(
+  ymd_hms("2020-03-31T13:40:55Z"), # Date/Time class
+  "一芳", # character
+  2, # numeric
+  "水果茶" # character
+)
+print(`小明交易1`)
+```
 
 
 
