--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -158,6 +158,21 @@ library(lubridate)
 )
 print(`小明交易1`)
 ```
+```{r}
+# vector
+`小明108學年課表A` <- c(
+  c("108-1","高級會計學","高等統計學"),
+  c("108-2","食在拉丁美洲")
+)
+print(`小明108學年課表A`)
+
+# list含兩個vectors
+`小明108學年課表A` <- list(
+  c("108-1","高級會計學","高等統計學"),
+  c("108-2","食在拉丁美洲")
+)
+print(`小明108學年課表A`)
+```
 
 
 
