--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -225,6 +225,25 @@ print(`小明108學年課表C`)
 )
 print(`小明108學年課表C`)
 ```
+## github commit
+```{r}
+commit <- list(
+  author =list(
+    name ="Martin老師", 
+    email="mtlin@gm.ntpu.edu.tw",
+    time=ymd_hms("2020-03-25T07:17:40Z") #ymd_hms電腦可識別為時間
+    ),
+
+committer = list(
+  name="emilyluckey",
+  email = "emily007@gmail.com",
+  time = ymd_hms("2020-03-26T08:18:40Z")
+),
+
+message ="update"
+)
+print(commit)
+```
 
 
 
