--- a/Untitled.Rmd
+++ b/Untitled.Rmd
@@ -1,7 +1,7 @@
 ---
-title: "2020-3-18"
+title: '417'
 author: "Tracy"
-date: "3/18/2020"
+date: "4/17/2020"
 output: html_document
 ---
 
@@ -28,223 +28,3 @@ plot(pressure)
 ```
 
 Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
-
-
-## package
-
-```{r}
-library(googlesheets4)
-library(dplyr)
-library(lubridate)
-```
-
-## create project
-```{r}
-a <- 2
-a = 2 # = 與 <-同義
-```
-
-```{r}
-a
-```
-
-
-##Atomic Vector
-```{r}
-num1 <- 5
-vNum1 <- c(2,5)
-vNum2 <- c(2, num1)
-```
-```{r}
-vNum1 <- c(-1,5)
-vNum2 <- c(2,3)
-vNum4 <- c() # 空向量
-```
-```{r}
-vNum3 <- c(vNum2, vNum1)
-vNum4 <- c(vNum4, vNum1) # 向量疊代 （recursive vector concatenate）
-```
-
-
-##different types
-```{r}
-num1<-5 # 非整數
-num2<-5L # 整數
-
-num1Vector<-c(5,6,7)
-num2Vector<-c(5L,6L,7L)
-```
-```{r}
-typeof(num1Vector)
-typeof(num2Vector)
-```
-
-
-##character
-```{r}
-char1<-"你好"
-char2<-'你好'
-```
-
-```{r}
-library(httr)
-library(dplyr)
-GET("https://api.github.com/repos/tpemartin/108-2-56-inclass-practice/commits") %>%
-  content() %>%
-  View()
-```
-
-```{r}
-library(googlesheets4)
-`出席狀況表單網址` <- "https://docs.google.com/spreadsheets/d/1EAG49qDKPWWi0ebkVr29TLrvVnoBPfkvxYY-J3xLAHY/edit?usp=drive_open&ouid=102488507875366675447 "# 缺乏定義值
-ss <- as_sheets_id(`出席狀況表單網址`)
-homework_sheet <- sheets_read(ss,sheet=1)
-```
-
-## logic
-```{r}
-logi1 <- c(T,TRUE,F,FALSE,FALSE)
-```
-
-```{r}
-sum(logi1)
-```
-
-## extended automic vector
-
-```{r}
-# 10位學生的主系
-majors10_char <- c('經濟學系','社會學系','社會學系','經濟學系','經濟學系','社會學系','經濟學系','經濟學系','經濟學系','社會學系')
-
-typeof(majors10_char)
-class(majors10_char)
-```
-
-```{r}
-majors10_factor <- factor(majors10_char)
-# 或
-majors10_factor <- factor(
-  c('經濟學系','社會學系','社會學系','經濟學系','經濟學系','社會學系','經濟學系','經濟學系','經濟學系','社會學系')
-)
-
-typeof(majors10_factor)
-class(majors10_factor)
-```
-
-```{r}
-levels(majors10_factor)
-```
-
-##list
-```{r}
-vectorExample <- c(2,6,7)
-listExample <- list(2,6,7)
-
-print(vectorExample)
-print(listExample)
-```
-```{r}
-c("2020-03-31T13:40:55Z",
-  "一芳", 
-  "2",
-  "水果茶" )
-
-library(lubridate)
-`小明交易1` <- list(
-  ymd_hms("2020-03-31T13:40:55Z"), # Date/Time class
-  "一芳", # character
-  2, # numeric
-  "水果茶" # character
-)
-print(`小明交易1`)
-```
-```{r}
-# vector
-`小明108學年課表A` <- c(
-  c("108-1","高級會計學","高等統計學"),
-  c("108-2","食在拉丁美洲")
-)
-print(`小明108學年課表A`)
-
-# list含兩個vectors
-`小明108學年課表A` <- list(
-  c("108-1","高級會計學","高等統計學"),
-  c("108-2","食在拉丁美洲")
-)
-print(`小明108學年課表A`)
-```
-```{r}
-# list含兩個lists
-`小明108學年課表B` <- list(
-  list("108-1","高級會計學","高等統計學"),
-  list("108-2","食在拉丁美洲")
-)
-print(`小明108學年課表B`)
-```
-```{r}
-# list含兩個lists, 子層list又各含兩個vectors
-`小明108學年課表C` <- list(
-  list(
-    c("108-1"), # 可只寫 "108-1"
-    c("高級會計學","高等統計學")
-       ),
-  list(
-    c("108-2"),
-    c("食在拉丁美洲")
-  )
-)
-print(`小明108學年課表C`)
-```
-物件值可以取名
-```{r}
-# list含兩個lists, 子層list又各含兩個vectors
-`小明108學年課表C` <- list(
-  `108學年第1學期`=list(
-    semester=c("108-1"), # 可只寫 "108-1"
-    courses=c("高級會計學","高等統計學")
-       ),
-  `108學年第2學期`=list(
-    semester=c("108-2"),
-    courses=c("食在拉丁美洲")
-  )
-)
-print(`小明108學年課表C`)
-```
-
-```{r}
-# list含兩個lists, 子層list又各含兩個vectors
-`小明108學年課表C` <- list(
-  `108學年第1學期`=list(
-    semester=c("108-1"), # 可只寫 "108-1"
-    courses=c("高級會計學","高等統計學")
-       ),
-  list(
-    c("108-2"),
-    c("食在拉丁美洲")
-  )
-)
-print(`小明108學年課表C`)
-```
-## github commit
-```{r}
-commit <- list(
-  author =list(
-    name ="Martin老師", 
-    email="mtlin@gm.ntpu.edu.tw",
-    time=ymd_hms("2020-03-25T07:17:40Z") #ymd_hms電腦可識別為時間
-    ),
-
-committer = list(
-  name="emilyluckey",
-  email = "emily007@gmail.com",
-  time = ymd_hms("2020-03-26T08:18:40Z")
-),
-
-message ="update"
-)
-print(commit)
-```
-
-
-
-
