--- a/class.Rmd
+++ b/class.Rmd
@@ -1684,3 +1684,23 @@ codetools::findGlobals(myDemand)
 rm(intercept, slope)
 ```
 
+##Conditional Execution
+###if  用在「某個條件符合才執行」的狀況
+```{r}
+if(condition){
+  Body for TRUE
+  }
+```
+
+```{r}
+# 先執行此行輸入學號
+studentId <- readline(prompt = "請輸入你的學號")
+
+# 之後才執行以下程式
+#condition:true 學號不正確
+if (str_detect(studentId, "^[43](1[01][0-9]|9[0-9])[0-9]{5}$", negate = T)  # condition: 是否輸入學號正確？
+) {
+    warning("你所輸入的學號不正確")
+}
+```
+
