--- a/class.Rmd
+++ b/class.Rmd
@@ -1909,7 +1909,7 @@ student_i_section == "56"
 ```
 if…else…組合：
 ```{r}
-i <- 1
+i <- 3
 student_i_section <- examSubmissionTime$section[[i]]
 student_i_time <- examSubmissionTime$time[[i]]
 
@@ -1922,3 +1922,85 @@ if (student_i_section == "56") {
 howEarly <- deadline - lubridate::ymd_hms(student_i_time, tz = "Asia/Taipei")
 print(howEarly)
 ```
+可以使用function＋map算出每位同學提早時間
+```{r}
+compute_howEarly <- function(student_i_section, student_i_time) {
+    # student_i_section <- examSubmissionTime$section[[i]] student_i_time <-
+    # examSubmissionTime$time[[i]]
+    
+    if (student_i_section == "56") {
+        deadline <- lubridate::ymd_hms("2020-05-27 15:00:00", tz = "Asia/Taipei")
+    } else {
+        deadline <- lubridate::ymd_hms("2020-05-27 17:00:00", tz = "Asia/Taipei")
+    }
+    
+    howEarly <- deadline - lubridate::ymd_hms(student_i_time, tz = "Asia/Taipei")
+    # print(howEarly)
+    
+    return(howEarly)
+}
+```
+
+```{r}
+compute_howEarly(examSubmissionTime$section[[1]], examSubmissionTime$time[[1]])
+compute_howEarly(examSubmissionTime$section[[2]], examSubmissionTime$time[[2]])
+compute_howEarly(examSubmissionTime$section[[3]], examSubmissionTime$time[[3]])
+```
+
+```{r}
+studentSequence <- 1:length(examSubmissionTime$section)
+library(purrr)
+list_howEarly <- map(studentSequence, ~compute_howEarly(examSubmissionTime$section[[.x]], 
+    examSubmissionTime$time[[.x]])) %>%
+  unlist()->examSubmissionTime$howEarly
+```
+78節和56節交卷提早時間比較
+```{r}
+library(magrittr)
+examSubmissionTime$howEarly <- list_howEarly %>% unlist()
+
+pick_56 <- examSubmissionTime$section == "56"
+mean(examSubmissionTime$howEarly[pick_56])
+median(examSubmissionTime$howEarly[pick_56])
+
+pick_78 <- examSubmissionTime$section == "78"
+mean(examSubmissionTime$howEarly[pick_78])
+median(examSubmissionTime$howEarly[pick_78])
+```
+###5.3.3 if…else if… else
+```{r}
+if(condition A){
+  body for A 
+} else if(condition B){
+  body for B
+} else if(condition C){
+  body for C
+} else {
+  body for none of the above
+}
+```
+成績等級：
+
+>=90: 優 # condition A
+
+80-89：良 # condition B
+
+70-79：尚可 # condition C
+
+70以下：待加強 # else
+```{r}
+grade <- readline("請輸入你的成績（整數）： ") #單獨執行
+```
+
+```{r}
+if (grade >= 90) {
+    print("優")
+} else if (grade >= 80 & grade <= 89) {
+    print("良")
+} else if (grade >= 70 & grade <= 79) {
+    print("尚可")
+} else {
+    print("待加強")
+}
+```
+
